# keyrx2

./: .gitignore  CHANGELOG.md  Cargo.toml  DDD_DOMAIN_IMPLEMENTATION.md  DDD_IMPLEMENTATION_COMPLETE.md  INSTALLER_SETUP.md  LINUX_UX_FEATURES.md  Makefile  PROFILE_CONFIG_ARCHITECTURE.md  QUICK_RELEASE.md  README.md  SETUP.md  VIOLATIONS_FIXED.md  cobertura.xml  metrics.jsonl  package-lock.json  package.json  test-results.json  user_layout.krx
keyrx_compiler/: Cargo.toml
keyrx_compiler/keyrx_compiler/benches/: compile_bench.rs
keyrx_compiler/src/: import_resolver.rs  lib.rs  main.rs  parser.rs  serialize.rs
keyrx_compiler/src/cli/: compile.rs  hash.rs  mod.rs  parse.rs  verify.rs  view.rs
keyrx_compiler/src/error/: display.rs  formatting.rs  mod.rs  types.rs
keyrx_compiler/src/parser/: core.rs  mod.rs  validators.rs
keyrx_compiler/src/parser/functions/: conditional.rs  device.rs  map.rs  mod.rs  modifiers.rs  tap_hold.rs
keyrx_compiler/tests/: cli_tests.rs  compile_handler_test.rs  error_formatting_tests.rs  integration_tests.rs  parser_function_tests.rs  property_tests.proptest-regressions  property_tests.rs  validators_tests.rs
keyrx_compiler/tests/integration/: import_tests.rs  workflow_tests.rs
keyrx_core/: Cargo.toml
keyrx_core/benches/: core_bench.rs
keyrx_core/fuzz/: Cargo.toml  README.md  RUNTIME_FUZZING_RESULTS.md
keyrx_core/fuzz/artifacts/fuzz_runtime/: crash-661e8849b0ff037bd8e15efc81e613060af3013b
keyrx_core/fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_runtime.rs
keyrx_core/src/: config.rs  lib.rs  wasm.rs
keyrx_core/src/config/: conditions.rs  keys.rs  mappings.rs  mod.rs  types.rs
keyrx_core/src/config/domain/: aggregates.rs  entities.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
keyrx_core/src/domain/: aggregates.rs  entities.rs  events.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
keyrx_core/src/parser/: error.rs  mod.rs  state.rs  validators.rs
keyrx_core/src/parser/functions/: conditional.rs  device.rs  map.rs  mod.rs  modifiers.rs  tap_hold.rs
keyrx_core/src/runtime/: event.rs  lookup.rs  mod.rs  state.rs  tap_hold.rs
keyrx_core/src/runtime/tap_hold/: event_processor.rs  mod.rs  state_machine.rs  timeout_handler.rs  types.rs
keyrx_core/src/testing/: mod.rs
keyrx_core/src/testing/domain/: aggregates.rs  entities.rs  events.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
keyrx_core/src/wasm/: mod.rs  validation.rs
keyrx_core/tests/: tap_hold_integration.rs  user_scenarios_integration.rs
keyrx_daemon/: Cargo.toml  README.md  build.rs  build_log.txt  keyrx_daemon.exe.manifest  keyrx_installer.wxs  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt
keyrx_daemon/benches/: README.md  device_registry.rs  ipc_latency.rs  profile_activation.rs
keyrx_daemon/desktop/: keyrx-autostart.desktop  keyrx.desktop
keyrx_daemon/docs/: windows_architecture.md
keyrx_daemon/examples/: runtime_example.rs
keyrx_daemon/src/: config_loader.rs  error.rs  lib.rs  macro_recorder.rs  main.rs  processor.rs  test_mode.rs
keyrx_daemon/src/cli/: common.rs  config.rs  config_dir.rs  config_handlers.rs  config_helpers.rs  devices.rs  error.rs  layers.rs  metrics.rs  mod.rs  profiles.rs  simulate.rs  test.rs
keyrx_daemon/src/config/: device.rs  device_registry.rs  layout_manager.rs  mod.rs  profile_compiler.rs  profile_manager.rs  rhai_generator.rs  simulation_engine.rs
keyrx_daemon/src/daemon/: event_broadcaster.rs  event_loop.rs  linux.rs  metrics.rs  mod.rs  mod.rs.backup  remapping_state.rs  state.rs  windows.rs
keyrx_daemon/src/daemon/signals/: linux.rs
keyrx_daemon/src/device_manager/: linux.rs  mod.rs  windows.rs
keyrx_daemon/src/domain/: README.md  aggregates.rs  entities.rs  events.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
keyrx_daemon/src/ipc/: commands.rs  mod.rs  server.rs  unix_socket.rs
keyrx_daemon/src/platform/: common.rs  linux.rs  mock.rs  mod.rs  recovery.rs
keyrx_daemon/src/platform/domain/: IMPLEMENTATION_SUMMARY.md  mod.rs
keyrx_daemon/src/platform/linux/: device_discovery.rs  input_capture.rs  keycode_map.rs  mod.rs  output_injection.rs  tray.rs
keyrx_daemon/src/platform/macos/: input_capture.rs  keycode_map.rs  mod.rs
keyrx_daemon/src/platform/windows/: device_map.rs  hook.rs  inject.rs  input.rs  keycode.rs  mod.rs  output.rs  rawinput.rs  tests.rs  tray.rs
keyrx_daemon/src/processor/: logging.rs  mod.rs  test_utils.rs  tests_coverage.rs
keyrx_daemon/src/services/: config_service.rs  device_service.rs  mod.rs  profile_service.rs  settings_service.rs  simulation_service.rs
keyrx_daemon/src/test_utils/: mod.rs  output_capture.rs  virtual_keyboard.rs
keyrx_daemon/src/web/: api.rs  error.rs  events.rs  mod.rs  rpc_types.rs  static_files.rs  ws.rs  ws_rpc.rs  ws_test.rs
keyrx_daemon/src/web/api/: config.rs  (+8 more)
keyrx_daemon/systemd/: keyrx-user.service  keyrx.service
keyrx_daemon/templates/: default.rhai
keyrx_daemon/tests/: api_contracts_test.rs  api_devices_test.rs  api_profiles_test.rs  api_settings_test.rs  bug_regression_tests.rs  cli_config_test.rs  cli_devices_test.rs  cli_integration.proptest-regressions  cli_integration.rs  cli_metrics_test.rs  cli_profiles_test.rs  cli_state_test.rs  cli_status_test.rs  cli_tests.rs  component_multidevice.rs  daemon_tests.rs  e2e_harness.rs  e2e_macos_basic.rs  e2e_macos_harness.rs  e2e_tests.rs  e2e_windows_bugs.rs  e2e_windows_multidevice.rs  error_propagation_test.rs  event_broadcasting_test.rs  integration_tests.rs  macos_integration.rs  macos_mock_tests.rs  multi_device_integration.rs  processor_tests.rs  profile_manager_tests.rs  simulator_api_test.rs  tap_hold_e2e.rs  tray_integration.rs  virtual_e2e_tests.rs  virtual_keyboard_detection.rs  websocket_contract_test.rs  windows_bugs.rs
keyrx_daemon/tests/common/: test_app.rs
keyrx_daemon/tests/windows_bugs/: code_inspection_tests.rs  device_hotplug_tests.rs  error_recovery_tests.rs  memory_safety_tests.rs  message_queue_tests.rs  rwlock_tests.rs  utils.rs
keyrx_daemon/udev/: 99-keyrx.rules
(+864 files in other folders)
