[package]
name = "keyrx_compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrx_core = { path = "../keyrx_core" }
rhai = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
proptest = { workspace = true }
criterion = { workspace = true }
