[package]
name = "keyrx_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rkyv = { workspace = true }
fixedbitset = { workspace = true }
arrayvec = { workspace = true }
serde = { workspace = true }
bitvec = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }

# WASM-specific dependencies
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "once_cell"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "core_bench"
harness = false
