[package]
name = "keyrx_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
rkyv = { workspace = true }
fixedbitset = { workspace = true }
arrayvec = { workspace = true }
serde = { workspace = true }
bitvec = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }

# WASM-specific dependencies
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }

# Compiler dependencies (for WASM load_config functionality)
rhai = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# WASM random number generation (for transitive dependencies like ahash)
# wasm_js feature is required for WASM targets
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "once_cell", "rhai", "sha2", "serde_json", "getrandom"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
wasm-bindgen-test = { workspace = true }

[[bench]]
name = "core_bench"
harness = false
