[package]
name = "keyrx_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
rkyv = { workspace = true }
fixedbitset = { workspace = true }
arrayvec = { workspace = true }
serde = { workspace = true }
bitvec = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# WASM-specific dependencies
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

# Compiler dependencies (for WASM load_config functionality)
rhai = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
spin = { version = "0.9", optional = true }

# WASM random number generation (for transitive dependencies like ahash)
# wasm_js feature is required for WASM targets
# Note: Not optional because ahash depends on it transitively
getrandom = { version = "0.3", features = ["wasm_js"] }
# Also need getrandom 0.2.x with js feature for transitive deps (const-random-macro)
getrandom_02 = { workspace = true, optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "once_cell", "web-sys", "rhai", "sha2", "serde_json", "getrandom_02", "spin"]

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "core_bench"
harness = false
