[package]
name = "keyrx_daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["web"]
linux = ["dep:evdev", "dep:uinput", "dep:nix"]
windows = ["dep:windows-sys"]
web = ["dep:axum", "dep:tower-http", "dep:tokio", "dep:serde", "dep:serde_json"]

[dependencies]
keyrx_core = { path = "../keyrx_core" }
thiserror = "2.0"

# Linux-specific dependencies
evdev = { version = "0.12", optional = true }
uinput = { version = "0.1", optional = true }
nix = { version = "0.29", features = ["ioctl"], optional = true }

# Windows-specific dependencies
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"], optional = true }

# Web server dependencies
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
