[package]
name = "keyrx_daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["web"]
linux = ["dep:evdev", "dep:uinput", "dep:nix", "dep:signal-hook"]
windows = ["dep:windows-sys"]
web = ["dep:axum", "dep:tower-http", "dep:tokio", "dep:serde", "dep:serde_json"]

[dependencies]
keyrx_core = { path = "../keyrx_core" }
keyrx_compiler = { path = "../keyrx_compiler" }
rkyv = { version = "0.7", features = ["validation"] }
thiserror = "2.0"
log = "0.4"
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Logging facade implementation for CLI
env_logger = "0.11"

# Linux-specific dependencies
# evdev: Access to raw keyboard input devices via /dev/input/event*
evdev = { version = "0.12", optional = true }
# uinput: Create virtual keyboard for injecting remapped key events
uinput = { version = "0.1", optional = true }
# nix: Unix utilities for ioctls (EVIOCGRAB for exclusive device access) and poll
nix = { version = "0.29", features = ["ioctl", "poll"], optional = true }
# signal-hook: Signal handling for graceful shutdown (SIGTERM/SIGINT) and reload (SIGHUP)
signal-hook = { version = "0.3", optional = true }

# Windows-specific dependencies
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"], optional = true }

# Web server dependencies
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.14"
# CLI testing - assert_cmd for command execution, predicates for output assertions
assert_cmd = "2.0"
predicates = "3.1"
# Process management for E2E tests
libc = "0.2"
