[package]
name = "keyrx_daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
linux = []
windows = []

[dependencies]
keyrx_core = { path = "../keyrx_core" }
keyrx_compiler = { path = "../keyrx_compiler" }
rkyv = { version = "0.7", features = ["validation"] }
thiserror = "2.0"
log = "0.4"
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Logging facade implementation for CLI
env_logger = "0.11"
# Rhai for code generation
rhai = { workspace = true }

# Web server dependencies
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
humantime = "2.3.0"
# Embed static files in binary
include_dir = "0.7"
mime_guess = "2.0"
# IPC and metrics dependencies
interprocess = { version = "1.2", features = ["tokio_support"] }
hdrhistogram = "7.5"
# Config directory detection
dirs = "5.0"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
uinput = "0.1"
nix = { version = "0.29", features = ["ioctl", "poll"] }
signal-hook = "0.3"
appindicator3 = "0.3"
gtk = "0.18"
glib = "0.20"
crossbeam-channel = "0.5"
image = "0.25"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }
tray-icon = "0.19"
crossbeam-channel = "0.5"
image = "0.25"

[dev-dependencies]
tempfile = "3.14"
# CLI testing - assert_cmd for command execution, predicates for output assertions
assert_cmd = "2.0"
predicates = "3.1"
# Process management for E2E tests - nix for proper signal handling (SIGTERM/SIGKILL)
nix = { version = "0.29", features = ["signal", "process"] }
criterion = "0.5"
# Serial test execution to prevent environment variable pollution
serial_test = "3.2"
# Property-based testing
proptest = "1.4"

[[bench]]
name = "input_latency"
harness = false
