[package]
name = "keyrx_core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]
# Empty workspace to prevent this from being part of the parent workspace

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.keyrx_core]
path = ".."

[dependencies.keyrx_compiler]
path = "../../keyrx_compiler"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
